--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -17,29 +17,40 @@
 
 <script>
     const form = document.querySelector('form');
+    const emailError = document.querySelector('.email.error');
+    const passwordError = document.querySelector('.password.error'); 
 
-    form.addEventListener('submit',async (e) => {
 
+    form.addEventListener('submit', async(e) => {
       e.preventDefault();
       // get values
       const email = form.email.value;
       const password = form.password.value;
+      console.log(email, password);
 
+      try {
+      const res = await fetch('/signup', { 
+        method: 'POST', 
+        body: JSON.stringify({ email, password }),
+        headers: {'Content-Type': 'application/json'}
+      });
+          const data = await res.json();
+          console.log(data);
+          if (data.errors) {
+            emailError.textContent = data.errors.email;
+            passwordError.textContent = data.errors.password;
+          }
 
-      try{
-        const res=await fethch('/signup',{
-          method:'POST',
-          body:JSON.stringify({email, password}),
-          headers:{'Content-Type':'application/json'}
-        });
- 
-        
-        
-      }
-      catch(err){
-        console.log(err)
-        
-      }
-      
+          
+          if (data.user) {
+            location.assign('/');
+          }
+
+       
+    }
+    catch (err) {
+      console.log(err);
+    }
+
     });
   </script>
