--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -35,7 +35,7 @@
         headers: {'Content-Type': 'application/json'}
       });
           const data = await res.json();
-          console.log(data);
+         // console.log(data);
           if (data.errors) {
             emailError.textContent = data.errors.email;
             passwordError.textContent = data.errors.password;
