--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,14 +2,14 @@
 
 
 <form action="/signup">
-    <h2>Login up</h2>
+    <h2>Login </h2>
     <label for="email">Email</label>
     <input type="text" name="email" required />
     <div class="email error"></div>
     <label for="password">Password</label>
     <input type="password" name="password" required />
     <div class="password error"></div>
-    <button>Login up</button>
+    <button>Login </button>
   </form>
 
 <%- include('partials/footer'); -%>
@@ -17,11 +17,39 @@
 
 <script>
     const form = document.querySelector('form');
-    form.addEventListener('submit', (e) => {
+    const emailError = document.querySelector('.email.error');
+    const passwordError = document.querySelector('.password.error'); 
+
+    form.addEventListener('submit',async (e) => {
       e.preventDefault();
       // get values
       const email = form.email.value;
       const password = form.password.value;
-      console.log(email, password);
+     // console.log(email, password);
+
+      try {
+      const res = await fetch('/login', { 
+        method: 'POST', 
+        body: JSON.stringify({ email, password }),
+        headers: {'Content-Type': 'application/json'}
+      });
+          const data = await res.json();
+         console.log(data);
+          if (data.errors) {
+            emailError.textContent = data.errors.email;
+            passwordError.textContent = data.errors.password;
+          }
+
+          
+          if (data.user) {
+           // location.assign('/');
+          }
+
+       
+    }
+    catch (err) {
+      console.log(err);
+    }
+
     });
   </script>
