--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,8 +9,14 @@
   <nav>
     <h1><a href="/">Mani Smoothies</a></h1>
     <ul>
+    <% if(user) {%>
+    <li> Welcome, <%= user.email %> </li>
+    <%} else{ %>
     <li><a href="/logout">Log out</a></li>
       <li><a href="/login">Log in</a></li>
       <li><a href="/signup" class="btn">Sign up</a></li>
-    </ul> </nav>
+      <%} %>
+    </ul>
+
+    </nav>
   
